# Im2win

./: CMakeLists.txt  Convolution.hpp  README.md  WeTensor.hpp  bash.sh  build.sh  convImplentCUDA.cu  convImplentCUDA.cuh  im2winSIMD.hpp  test.cpp  test_benchmark.cpp  work.sh
benchmarks/: CMakeLists.txt  CMakeLists1.txt  README.md  benchmarks.cpp  benchmarks.h  demo.cpp
log/: README.md  log_float.txt  log_float_CPU.txt  log_float_GPU_Norm.txt  log_float_GPU_TFLOPS.txt  log_float_GPU_mem.txt  log_float_GPU_mem_GB.txt  log_float_GPU_mem_Norm.txt  log_float_GPU_mem_add_direct_Norm.txt  log_float_sum.txt
plot/: README.md  plotAblation_GPU.sh  plotGFLOPS_CPU.sh  plotGFLOPS_GPU.sh  plotGFLOPS_GPU_add_direct.sh  plotMEMORY_GPU.sh  plotMEMORY_GPU_add_direct.sh  plotTime.sh  plotTime_GPU.sh  plotTotal.sh
src/: README.md
src/cpp/: Convolution.hpp  WeTensor.hpp
src/cu/: convImplentCUDA.cu  convImplentCUDA.cuh
test/: CMakeLists.txt  test.cpp
